css/app.css
body{
    font-family: 'Open Sans', sans-serif;
}

header,footer{
    background-color: #333;
    color: #ddd;
    padding: 20px;
    text-align: center;
}


article img{
    width: 100%;
    height: 100%;
    text-align: center;
    box-shadow: 6px 6px 8px #777;
    margin-bottom: 20px;
}

.container-fluid seb{
    background-color: aqua;
}

